Fixed cards grid wrapping

--- a/scss/decks.scss
+++ b/scss/decks.scss
@@ -71,7 +71,7 @@ rule {
 	overflow-y: auto;
 	display: grid;
 	grid-template-columns: 1fr 7rem 5rem 1fr;
-	grid-auto-rows: 2rem;
+	grid-auto-rows: auto;
 	padding: 0 1rem;
 	margin: 1rem 0;
 	& th {
@@ -83,6 +83,9 @@ rule {
 	& td {
 	    padding: .5rem;
 	    border-top: 1px solid rgba(var(--text-rgb), .5);
+	    height: 100%;
+	    display: flex;
+	    align-items: center;
 	}
     }
     & span {
